--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -1,5 +1,5 @@
 ######## Payment Application build stage ########
-FROM openjdk:17.0-jdk-oracle
+FROM eclipse-temurin:21-jre
 
 COPY target/*.jar app.jar
 
