--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,17 +1,10 @@
-version: '3.7'
 
-volumes:
-  prometheus_data: { }
-  grafana_data: { }
-
-networks:
-  smart-city:
-
+name: smart-city-monitoring
 services:
 
   # Prometheus
   prometheus:
-    image: prom/prometheus:v2.39.1
+    image: prom/prometheus:v3.0.1
     container_name: smart-city-prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -26,29 +19,72 @@ services:
       - ./prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
     networks:
-      - smart-city
+      - smart-city-monitoring
+
+  # Grafana Loki
+  loki:
+    image: grafana/loki:3.3.2
+    container_name: smart-city-loki
+    restart: unless-stopped
+    volumes:
+      - loki_data:/loki
+    command: -config.file=/etc/loki/local-config.yaml
+    ports:
+      - "3100:3100"
+    networks:
+      - smart-city-monitoring
+
+  # Grafana Tempo
+  tempo:
+    image: grafana/tempo:latest
+    container_name: smart-city-tempo
+    restart: unless-stopped
+    command: ["-config.file=/etc/tempo.yaml"]
+    volumes:
+      - ./tempo/tempo.yaml:/etc/tempo.yaml:ro
+#      - tempo_data:/tmp/tempo
+    ports:
+      - "3200:3200"   # tempo
+      - "4317:4317"   # otlp grpc
+      - "4318:4318"   # otlp http
+    networks:
+      - smart-city-monitoring
+
+  # Grafana Pyroscope
+  pyroscope:
+    image: grafana/pyroscope:1.10.0
+    container_name: smart-city-pyroscope
+    restart: unless-stopped
+    ports:
+      - "4040:4040"
+    networks:
+      - smart-city-monitoring
 
   # Grafana
   grafana:
-    image: grafana/grafana-oss:9.2.0
+    image: grafana/grafana:11.4.0
     container_name: smart-city-grafana
-    depends_on:
-      - prometheus
     ports:
       - "3000:3000"
     restart: unless-stopped
     volumes:
       - ./grafana/provisioning/:/etc/grafana/provisioning/
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
       - grafana_data:/var/lib/grafana
     env_file:
       - ./grafana/config
     networks:
-      - smart-city
+      - smart-city-monitoring
+    depends_on:
+      - prometheus
+      - loki
+      - tempo
+      - pyroscope
 
   #  Smart Mobility
   smart-mobility:
     build:
-      context: ../smartmobility
+      context: ../smart-mobility
       dockerfile: Dockerfile
     container_name: smart-city-smart-mobility
     image: smart-city/smart-mobility
@@ -62,7 +98,7 @@ services:
     healthcheck:
       test: "exit 0"
     networks:
-      - smart-city
+      - smart-city-monitoring
 
   #  Payment
   payment:
@@ -79,4 +115,14 @@ services:
     healthcheck:
       test: "exit 0"
     networks:
-      - smart-city
+      - smart-city-monitoring
+
+networks:
+  smart-city-monitoring:
+    driver: bridge
+
+volumes:
+  prometheus_data:
+  grafana_data:
+  loki_data:
+  tempo_data:
