--- a/docker/grafana/config
+++ b/docker/grafana/config
@@ -1,2 +1,4 @@
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=grafana
+GF_USERS_ALLOW_SIGN_UP=false
+GF_INSTALL_PLUGINS=grafana-piechart-panel
